[package]
authors = ["anderejd <rajder@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
description = "Run a command for each crate root path in a Rust crate dependency tree."
edition = "2018"
keywords = ["cargo", "plugin"]
license = "Apache-2.0"
name = "cargo-walk"
readme = "README.md"
repository = "https://github.com/anderejd/cargo-walk"
version = "0.1.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
cargo = "0.38.0"
clap = "2.33.0"
structopt = "0.3.1"

